[Mac][Material Design] Fix regression with infobar border.

This cl fixes a regression where infobars no longer displayed their
border.

R=avi@chromium.org
BUG=615312

Review-Url: https://codereview.chromium.org/2029893002
Cr-Commit-Position: refs/heads/master@{#397473}