chrome/browser/ui/cocoa/infobars/infobar_gradient_view.mm
@@ -53,14 +53,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
   if (!themeProvider)
     return [NSColor blackColor];
 
-  if (!ui::MaterialDesignController::IsModeMaterial()) {
-    BOOL active = [[self window] isMainWindow];
-    return themeProvider->GetNSColor(
-        active ? ThemeProperties::COLOR_TOOLBAR_STROKE :
-                 ThemeProperties::COLOR_TOOLBAR_STROKE_INACTIVE);
-  }
+  BOOL active = [[self window] isMainWindow];
   return themeProvider->GetNSColor(
-             ThemeProperties::COLOR_DETACHED_BOOKMARK_BAR_SEPARATOR);
+      active ? ThemeProperties::COLOR_TOOLBAR_STROKE :
+               ThemeProperties::COLOR_TOOLBAR_STROKE_INACTIVE);
 }
 
 - (void)drawRect:(NSRect)rect {
